css/main.css
/*
 ##########################################################
 START DO NOT CHANGE ZONE
 ##########################################################
*/

html {
  box-sizing: border-box;

  color: #222;
  font: normal 100%/1.5 Georgia, serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

img {
  display: block;
  width: 100%;
}

.wrapper {
  margin: 0 auto;
  max-width: 45em;
}

header {
  padding: 1.5rem 0;

  background-color: #333;

  color: #f2f2f2;
}

h1 {
  margin: 0;

  font-size: 1.5rem;
}

.chapter-num {
  display: block;

  font-size: 1rem;
  font-style: italic;
}

.colon {
  display: none;
}

main {
  padding: 1.5rem 0;
}

p {
  margin: 0;

  text-indent: 1.3em;
}

p:first-child {
  text-indent: 0;
}

main > p:first-child::first-line {
  font-style: italic;
}

footer {
  padding: 1.5rem 0;

  background-color: #333;

  color: #f2f2f2;
}

/*
 ##########################################################
 END DO NOT CHANGE ZONE
 ##########################################################
*/

/* Write your CSS here */

.wrapper > p:first-child::first-letter {
  font-size: 5rem;
  color: #f2f2f2;
  font-style: normal;
  background-color: #666;
  float: left;
  border-width: 3px;
  padding: 6px;
  border-top: 3px solid #333;
  border-bottom: 3px solid #333;
  margin-right: .1em;
  margin-left: -.3em;
}

figure {
  border-top: 3px solid #333;
  border-bottom: 3px solid #333;
  float: right;
  width: 300px;
  padding: .4em .2em;
  margin-right: -150px;
  margin-left: 10px;
}

figcaption {
  font-size: .875rem;
  font-style: italic;
}

blockquote {
  font-size: 1.875rem;
  color: #666;
  float: left;
  width: 300px;
  border-top: 3px solid #333;
  border-bottom: 3px solid #333;
  text-align: right;
  margin-right: 10px;
  margin-left: -150px;
  margin-top: 10px;
  margin-bottom: 10px;
}

